# Vedo

./: .gitignore  .replit  BUG_REPORT_WEBSOCKET_CONNECTION.md  END_TO_END_TEST_REPORT.md  ENHANCEMENT_IMPLEMENTATION_PLAN.md  FINAL_SYSTEM_STATUS.md  ISSUE_NODE_VERSION_COMPATIBILITY.md  QUICK_START_GUIDE.md  README_ZH.md  SETUP_GUIDE.md  TESTING_SUMMARY.md  UX_IMPROVEMENT_RECOMMENDATIONS.md  WEBSOCKET_FIX_COMPLETE.md  WEEK3_COMPLETE_WEBSOCKET_INTEGRATION.md  WEEK3_PHASE2_FRONTEND_WEBSOCKET_COMPLETE.md  api_routes_chat.py  api_routes_compilation.py  api_routes_conv_assets.py  api_routes_conv_characters.py  api_routes_conv_episodes.py  api_routes_conv_outline.py  api_routes_conv_progress.py  api_routes_conv_scenes.py  api_routes_conv_shared.py  api_routes_conv_storyboard.py  api_routes_conv_video.py  api_routes_conversational.py  api_routes_direct_pipeline.py  api_routes_models.py  api_routes_segment_review.py  api_routes_segments.py  api_routes_unified_characters.py  api_routes_unified_video.py  api_routes_video.py  api_routes_websocket.py  api_routes_websocket_enhanced.py  api_server.py  backup_project.sh  benchmark_performance.py  character_consistency.py  (+17 more)
agents/: __init__.py  base_a2a_agent.py  character_extractor.py  character_portraits_generator.py  memory_augmented_agent.py  personality_extractor.py  scene_image_generator.py  screenwriter.py  screenwriter_a2a.py  screenwriter_memory.py  storyboard_artist.py
attached_assets/: Pasted--Character-Generation-70-0-Extracting-personality-trait_1766909170090.txt  (+6 more)
configs/: idea2video.yaml  script2video.yaml
(+207 files in other folders)
